--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.2
+  tuple: ^2.0.1
   cached_network_image: ^3.2.3
+  package_info_plus: ^3.0.3
   cupertino_icons: ^1.0.2
   device_info_plus: ^8.1.0
   retrofit: '>=4.0.0 <5.0.0'
