--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,40 +30,42 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.2
+  flutter_svg: ^2.0.3
   tuple: ^2.0.1
   cached_network_image: ^3.2.3
   package_info_plus: ^3.0.3
   cupertino_icons: ^1.0.2
   device_info_plus: ^8.1.0
   retrofit: '>=4.0.0 <5.0.0'
-  dio: ^5.0.1
+  dio: ^5.0.2
   logger: ^1.1.0
   webview_flutter: ^4.0.5
   flutter_hooks: ^0.18.6
-  flutter_riverpod: ^2.2.0
+  flutter_riverpod: ^2.3.0
   flutter_easyloading: ^3.0.5
   freezed_annotation: ^2.2.0
   go_router: ^6.2.0
-  image_picker: ^0.8.6+3
+  image_picker: ^0.8.7
   json_annotation: ^4.8.0
   keyboard_actions: ^4.2.0
-  riverpod_annotation: ^1.2.1
+  riverpod_annotation: ^2.0.1
   sp_util: ^2.0.3
   permission_handler: ^10.2.0
+  group_radio_button: ^1.3.0
   liveness_plugin:
     path: plugins/liveness_plugin
 
 dev_dependencies:
-  build_runner: ^2.3.2
+  build_runner: ^2.3.3
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
   freezed: ^2.3.2
-  go_router_builder: ^1.1.2
+  go_router_builder: ^1.1.6
   json_serializable: ^6.6.1
-  riverpod_generator: ^1.2.0
-  retrofit_generator: '>=5.0.0 <6.0.0'
+  riverpod_generator: ^2.1.3
+  retrofit_generator: ^6.0.0+1
+  riverpod_lint: ^1.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -78,6 +80,7 @@ flutter:
     - assets/images/
     - assets/images/login/
     - assets/images/home/
+    - assets/images/auth/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
