--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.example.shine_credit">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.tpay.loan.credit.product">
     
     <uses-permission android:name="android.permission.INTERNET"/>
 
