--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   sp_util: ^2.0.3
   permission_handler: ^10.2.0
   group_radio_button: ^1.3.0
+  fluttercontactpicker: ^4.7.0
   liveness_plugin:
     path: plugins/liveness_plugin
 
@@ -81,6 +82,7 @@ flutter:
     - assets/images/login/
     - assets/images/home/
     - assets/images/auth/
+    - assets/images/state/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
