--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
 android.useAndroidX=true
+android.bundle.enableUncompressedNativeLibs=false
 android.enableJetifier=true
 org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-11.jdk/Contents/Home
 
