--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,10 +14,10 @@
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application
-        android:label="shine_credit"
+        android:label="Lend Ease"
         android:networkSecurityConfig="@xml/network_security_config"
         android:name=".MyApplication"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
             android:exported="true"
