--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -12,7 +12,7 @@ flutter_native_splash:
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
   color: '#FAFAFA'
-  image: assets/images/user_default.png
+  image: assets/icon/icon.png
   #background_image: "assets/background.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
@@ -29,7 +29,7 @@ flutter_native_splash:
 
   # To position the branding image at the bottom of the screen you can use bottom, bottomRight,
   # and bottomLeft. The default values is bottom if not specified or specified something else.
-  #branding_mode: bottom
+  branding_mode: bottom
 
   # The color_dark, background_image_dark, image_dark, branding_dark are parameters that set the background
   # and image when the device is in dark mode. If they are not specified, the app will use the
@@ -46,7 +46,7 @@ flutter_native_splash:
   # Following are Android 12 specific parameter.
   android_12:
     color: '#FAFAFA'
-    image: assets/images/user_default.png
+    image: assets/icon/icon.png
     # The image parameter sets the splash screen icon image.  If this parameter is not specified,
     # the app's launcher icon will be used instead.
     # Please note that the splash screen will be clipped to a circle on the center of the screen.
