--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ dev_dependencies:
   riverpod_generator: ^2.1.3
   retrofit_generator: ^6.0.0+1
   riverpod_lint: ^1.1.5
-
+  flutter_launcher_icons: '^0.12.0'
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
