feat: 修改验证码倒计时

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/icon/
     - assets/images/login/
     - assets/images/home/
     - assets/images/auth/
