--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -12,7 +12,7 @@ flutter_native_splash:
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
   color: '#FAFAFA'
-  image: assets/icon/launch_log.png
+  image: assets/icon/splash_icon.png
   #background_image: "assets/background.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
@@ -46,7 +46,7 @@ flutter_native_splash:
   # Following are Android 12 specific parameter.
   android_12:
     color: '#FAFAFA'
-    image: assets/icon/launch_log.png
+    image: assets/icon/splash_icon.png
     # The image parameter sets the splash screen icon image.  If this parameter is not specified,
     # the app's launcher icon will be used instead.
     # Please note that the splash screen will be clipped to a circle on the center of the screen.
