--- a/plugins/verify_plugin/android/src/main/AndroidManifest.xml
+++ b/plugins/verify_plugin/android/src/main/AndroidManifest.xml
@@ -1,3 +1,3 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.tpay.loan.credit.product.verify_plugin">
+  package="com.galong.lend.ease.hub.verify_plugin">
 </manifest>
