--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   retrofit: '>=4.0.0 <5.0.0'
   dio: ^5.0.2
   logger: ^1.1.0
-  webview_flutter: ^4.0.5
+  webview_flutter: ^4.0.7
   flutter_hooks: ^0.18.6
   flutter_riverpod: ^2.3.0
   freezed_annotation: ^2.2.0
@@ -58,6 +58,7 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   facebook_app_events: ^0.18.3
   url_launcher: ^6.1.10
+  app_links: ^3.4.2
   verify_plugin:
     path: plugins/verify_plugin
   flutter_easyloading:
@@ -75,6 +76,7 @@ dev_dependencies:
   retrofit_generator: ^6.0.0+1
   riverpod_lint: ^1.1.5
   flutter_launcher_icons: '^0.12.0'
+  change_app_package_name: ^1.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
