feat: 添加短信记录上传

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,24 +30,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.3
+  flutter_svg: ^2.0.5
   tuple: ^2.0.1
   cached_network_image: ^3.2.3
-  package_info_plus: ^3.0.3
+  package_info_plus: ^3.1.0
   cupertino_icons: ^1.0.2
   device_info_plus: ^8.1.0
   retrofit: '>=4.0.0 <5.0.0'
-  dio: ^5.0.2
-  logger: ^1.1.0
+  dio: ^5.1.1
+  logger: ^1.3.0
   webview_flutter: ^4.0.7
   flutter_hooks: ^0.18.6
-  flutter_riverpod: ^2.3.0
+  flutter_riverpod: ^2.3.4
   freezed_annotation: ^2.2.0
-  go_router: ^6.5.0
-  image_picker: ^0.8.7
+  go_router: ^6.5.6
+  image_picker: ^0.8.7+2
   json_annotation: ^4.8.0
   keyboard_actions: ^4.2.0
-  riverpod_annotation: ^2.0.1
+  riverpod_annotation: ^2.0.4
   sp_util: ^2.0.3
   permission_handler: ^10.2.0
   group_radio_button: ^1.3.0
@@ -59,6 +59,7 @@ dependencies:
   facebook_app_events: ^0.18.3
   url_launcher: ^6.1.10
   app_links: ^3.4.2
+  flutter_sms_inbox: ^1.0.1
   verify_plugin:
     path: plugins/verify_plugin
   flutter_easyloading:
@@ -70,12 +71,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.3.2
-  go_router_builder: ^1.1.7
+  go_router_builder: ^1.2.1
   json_serializable: ^6.6.1
   riverpod_generator: ^2.1.3
   retrofit_generator: ^6.0.0+1
   riverpod_lint: ^1.1.5
-  flutter_launcher_icons: '^0.12.0'
+  flutter_launcher_icons: ^0.13.0
   change_app_package_name: ^1.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
