--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <!-- Permissions options for the `contacts` group -->
     <uses-permission
         android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.READ_SMS"/>
     <!-- Permissions options for the `storage` group -->
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"/>
