--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission
         android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.READ_SMS"/>
+    <!-- Permission options for the 'app list' -->
+    <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
     <!-- Permissions options for the `storage` group -->
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"/>
