--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   url_launcher: ^6.1.10
   app_links: ^3.4.2
   flutter_sms_inbox: ^1.0.1
+  device_apps: ^2.2.0
+  contacts_service: ^0.6.3
   verify_plugin:
     path: plugins/verify_plugin
   flutter_easyloading:
