--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: shine_credit
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -16,10 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+2
+version: 1.2.0+4
 
 environment:
-  sdk: '>=2.19.2 <3.0.0'
+    sdk: ">=2.19.2 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -28,98 +28,98 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-  flutter_svg: ^2.0.5
-  tuple: ^2.0.1
-  cached_network_image: ^3.2.3
-  package_info_plus: ^3.1.0
-  cupertino_icons: ^1.0.2
-  device_info_plus: ^8.1.0
-  retrofit: '>=4.0.0 <5.0.0'
-  dio: ^5.1.1
-  logger: ^1.3.0
-  webview_flutter: ^4.0.7
-  flutter_hooks: ^0.18.6
-  flutter_riverpod: ^2.3.4
-  freezed_annotation: ^2.2.0
-  go_router: ^6.5.6
-  image_picker: ^0.8.7+2
-  json_annotation: ^4.8.0
-  keyboard_actions: ^4.2.0
-  riverpod_annotation: ^2.0.4
-  sp_util: ^2.0.3
-  permission_handler: ^10.2.0
-  group_radio_button: ^1.3.0
-  fluttercontactpicker: ^4.7.0
-  carousel_slider: ^4.2.1
-  equatable: ^2.0.5
-  flutter_native_splash: ^2.2.19
-  flutter_countdown_timer: ^4.1.0
-  facebook_app_events: ^0.18.3
-  url_launcher: ^6.1.10
-  app_links: ^3.4.2
-  flutter_sms_inbox: ^1.0.1
-  device_apps: ^2.2.0
-  contacts_service: ^0.6.3
-  verify_plugin:
-    path: plugins/verify_plugin
-  flutter_easyloading:
-    path: plugins/flutter_easyloading
+    flutter:
+        sdk: flutter
+    flutter_svg: ^2.0.5
+    tuple: ^2.0.1
+    cached_network_image: ^3.2.3
+    package_info_plus: ^3.1.0
+    cupertino_icons: ^1.0.2
+    device_info_plus: ^8.1.0
+    retrofit: ">=4.0.0 <5.0.0"
+    dio: ^5.1.1
+    logger: ^1.3.0
+    webview_flutter: ^4.0.7
+    flutter_hooks: ^0.18.6
+    flutter_riverpod: ^2.3.4
+    freezed_annotation: ^2.2.0
+    go_router: ^6.5.6
+    image_picker: ^0.8.7+2
+    json_annotation: ^4.8.0
+    keyboard_actions: ^4.2.0
+    riverpod_annotation: ^2.0.4
+    sp_util: ^2.0.3
+    permission_handler: ^10.2.0
+    group_radio_button: ^1.3.0
+    fluttercontactpicker: ^4.7.0
+    carousel_slider: ^4.2.1
+    equatable: ^2.0.5
+    flutter_native_splash: ^2.2.19
+    flutter_countdown_timer: ^4.1.0
+    facebook_app_events: ^0.18.3
+    url_launcher: ^6.1.10
+    app_links: ^3.4.2
+    flutter_sms_inbox: ^1.0.1
+    device_apps: ^2.2.0
+    contacts_service: ^0.6.3
+    verify_plugin:
+        path: plugins/verify_plugin
+    flutter_easyloading:
+        path: plugins/flutter_easyloading
 
 dev_dependencies:
-  build_runner: ^2.3.3
-  flutter_lints: ^2.0.1
-  flutter_test:
-    sdk: flutter
-  freezed: ^2.3.2
-  go_router_builder: ^1.2.1
-  json_serializable: ^6.6.1
-  riverpod_generator: ^2.1.3
-  retrofit_generator: ^6.0.0+1
-  riverpod_lint: ^1.1.5
-  flutter_launcher_icons: ^0.13.0
-  change_app_package_name: ^1.1.0
+    build_runner: ^2.3.3
+    flutter_lints: ^2.0.1
+    flutter_test:
+        sdk: flutter
+    freezed: ^2.3.2
+    go_router_builder: ^1.2.1
+    json_serializable: ^6.6.1
+    riverpod_generator: ^2.1.3
+    retrofit_generator: ^6.0.0+1
+    riverpod_lint: ^1.1.5
+    flutter_launcher_icons: ^0.13.0
+    change_app_package_name: ^1.1.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
-  uses-material-design: true
+    # The following line ensures that the Material Icons font is
+    # included with your application, so that you can use the icons in
+    # the material Icons class.
+    uses-material-design: true
 
-  assets:
-    - assets/images/
-    - assets/icon/
-    - assets/images/login/
-    - assets/images/home/
-    - assets/images/auth/
-    - assets/images/state/
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+    assets:
+        - assets/images/
+        - assets/icon/
+        - assets/images/login/
+        - assets/images/home/
+        - assets/images/auth/
+        - assets/images/state/
+    # To add assets to your application, add an assets section, like this:
+    # assets:
+    #   - images/a_dot_burr.jpeg
+    #   - images/a_dot_ham.jpeg
+    # An image asset can refer to one or more resolution-specific "variants", see
+    # https://flutter.dev/assets-and-images/#resolution-aware
+    # For details regarding adding assets from package dependencies, see
+    # https://flutter.dev/assets-and-images/#from-packages
+    # To add custom fonts to your application, add a fonts section here,
+    # in this "flutter" section. Each entry in this list should have a
+    # "family" key with the font family name, and a "fonts" key with a
+    # list giving the asset and other descriptors for the font. For
+    # example:
+    # fonts:
+    #   - family: Schyler
+    #     fonts:
+    #       - asset: fonts/Schyler-Regular.ttf
+    #       - asset: fonts/Schyler-Italic.ttf
+    #         style: italic
+    #   - family: Trajan Pro
+    #     fonts:
+    #       - asset: fonts/TrajanPro.ttf
+    #       - asset: fonts/TrajanPro_Bold.ttf
+    #         weight: 700
+    #
+    # For details regarding fonts from package dependencies,
+    # see https://flutter.dev/custom-fonts/#from-packages
